openshift_template_snippets/05_deploymentconfig.yml
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    annotations:
    labels:
      app: ${APPLICATION_NAME}
    name: ${APPLICATION_NAME}
  spec:
    replicas: 2
    selector:
      name: ${APPLICATION_NAME}
    strategy:
      type: Rolling
      rollingParams:
        updatePeriodSeconds: 1
        intervalSeconds: 1
        timeoutSeconds: 120
        maxSurge: "50%"
        maxUnavailable: "50%"
    template:
      metadata:
        labels:
          name: ${APPLICATION_NAME}
      spec:
        volumes:
          - name: sites-volume
            configMap:
              name: sites.txt
        containers:
          - name: "${APPLICATION_NAME}"
            image: " "
            imagePullPolicy: Always
            ports:
              - containerPort: 8080
                protocol: TCP
            readinessProbe:
              httpGet:
                path: /index.html
                port: 8080
              initialDelaySeconds: 1
              timeoutSeconds: 1
            livenessProbe:
              httpGet:
                path: /index.html
                port: 8080
              initialDelaySeconds: 1
              timeoutSeconds: 1
            resources:
              request:
                cpu: ${CPU_REQ}
                memory: ${MEMORY_REQ}
              limits:
                cpu: ${CPU_LIMIT}
                memory: ${MEMORY_LIMIT}
            securityContext:
              capabilities: {}
              privileged: false
            terminationMessagePath: /dev/termination-log
            terminationMessagePolicy: File
            volumeMounts:
              - name: sites-volume
                mountPath: /etc/sites/
                readOnly: true
        dnsPolicy: ClusterFirst
        nodeSelector:
          purpose: ${ENV}
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
    triggers:
      - imageChangeParams:
          automatic: true
          containerNames:
            - ${APPLICATION_NAME}
          from:
            kind: ImageStreamTag
            name: ${APPLICATION_NAME}:latest
        type: ImageChange
      - type: ConfigChange
